// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should handle click 1`] = `
<scale-button icon-position="before">
  <mock:shadow-root>
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Label
</scale-button>
`;

exports[`Button should handle click 2`] = `
<scale-button icon-position="before">
  <mock:shadow-root>
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Label
</scale-button>
`;

exports[`Button should handle icon after 1`] = `
<scale-button icon-position="after">
  <mock:shadow-root>
    <button class="button button--icon-after button--size-large button--variant-primary" part="base variant-primary after">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Label
  <scale-icon-action-search></scale-icon-action-search>
</scale-button>
`;

exports[`Button should handle icon before 1`] = `
<scale-button icon-position="before">
  <mock:shadow-root>
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </mock:shadow-root>
  <scale-icon-action-search></scale-icon-action-search>
  Label
</scale-button>
`;

exports[`Button should match snapshot 1`] = `
<scale-button icon-position="before">
  <mock:shadow-root>
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Label
</scale-button>
`;
